Add base components

--- a/SuperHeroesApp.WebAssembly/wwwroot/index.html
+++ b/SuperHeroesApp.WebAssembly/wwwroot/index.html
@@ -6,6 +6,8 @@
     <title>SuperHeroesApp.WebAssembly</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap/bootstrap-grid.min.css" rel="stylesheet" />
+    <link href="css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
