--- a/SuperHeroesApp.WebAssembly/wwwroot/index.html
+++ b/SuperHeroesApp.WebAssembly/wwwroot/index.html
@@ -14,5 +14,6 @@
     <app>Loading...</app>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
