--- a/SuperHeroesApp.WebAssembly/wwwroot/index.html
+++ b/SuperHeroesApp.WebAssembly/wwwroot/index.html
@@ -11,7 +11,7 @@
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <app>Loading...</app>
+    <app style="min-height: 500px;">Loading...</app>
 
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/scripts.js"></script>
